Preventing content from collapsing when scrollbar is hidden

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -4,7 +4,7 @@ nav {
   background-color: var(--back);
   display: flex;
   justify-content: center;
-  width: 100%;
+  width: 100vw;
   z-index: 2;
   transition: 0.3s ease-in-out;
 }
